--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
     "enmap": "^5.8.5",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2"
   },
   "devDependencies": {
     "eslint": "^7.30.0",
