--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
     "enmap": "^5.8.5",
+    "first": "^0.0.3",
     "moment": "^2.29.1",
-    "moment-duration-format": "^2.3.2"
+    "moment-duration-format": "^2.3.2",
+    "ms": "^2.1.3",
+    "quick.db": "^7.1.3"
   },
   "devDependencies": {
     "eslint": "^7.30.0",
